feat(tipoPromocao): ajustes no CRUD de tipo de promoção para funcionar de acordo com o frontend